# zetamac-rs

./: .gitignore  Cargo.toml  LICENSE.txt  Makefile  README.md  dev.md  zetamac-rs.rb  zetamac_template.rb
homebrew/: zetamac.rb
src/: app.rs  app_state.rs  main.rs  operation.rs  question.rs  testconfig.rs
